# fanstatic

./: .gitignore  .hgignore  .meta.toml  .pep8  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  CREDITS.txt  LICENSE.txt  MANIFEST.in  README.rst  README.txt  TODO.txt  bitbucket-pipelines.yml  buildout.cfg  pip_requirements.txt  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: tests.yml
doc/: api.rst  compilers.rst  concepts.rst  conf.py  configuration.rst  development.rst  index.rst  injectors.rst  integration.rst  intro.rst  libraries.rst  library.rst  main.rst  optimization.rst  paste_deploy.rst  quickstart.rst  serf.rst
doc/_static/: default.css
doc/_templates/: layout.html
docs/: api.rst  compilers.rst  conf.py  index.rst  integration.rst  paste_deploy.rst  quickstart.rst
fanstatic/: README.txt  __init__.py  checksum.py  codegen.py  compat.py  compiler.py  config.py  core.py  hash.py  inclusion.py  inject.py  injector.py  json.py  publisher.py  registry.py  test_bundle.py  test_checksum.py  test_codegen.py  test_config.py  test_core.py  test_inject.py  test_injector.py  test_publisher.py  test_registry.py  test_slot.py  test_wsgi.py  tests.py  wsgi.py  zestreleaser.py
fanstatic/testdata/MyPackage/src/mypackage/: __init__.py
fixtures/mydevpackage/: setup.py
fixtures/mydevpackage/src/mydevpackage/: __init__.py
fixtures/mypackage/: setup.py
src/fanstatic/: __init__.py  checksum.py  compat.py  compiler.py  config.py  core.py  inclusion.py  injector.py  publisher.py  registry.py  wsgi.py
src/fanstatic/tests/: conftest.py  test_bundle.py  test_checksum.py  test_compiler.py  test_config.py  test_core.py  test_injector.py  test_injectorplugin.py  test_publisher.py  test_registry.py  test_slot.py  test_topbottominjector.py  test_wsgi.py
src/fanstatic/tests/fixtures/mydevpackage/: setup.py
src/fanstatic/tests/fixtures/mydevpackage/src/mydevpackage/: __init__.py
src/fanstatic/tests/fixtures/mypackage/: index.html  setup.py
src/fanstatic/tests/fixtures/mypackage/src/mypackage/: __init__.py
src/fanstatic/tests/testdata/SomePackage/: setup.py
src/fanstatic/tests/testdata/SomePackage/src/somepackage/: __init__.py  resources.py
tests/: conftest.py  test_bundle.py  test_checksum.py  test_codegen.py  test_compiler.py  test_config.py  test_core.py  test_injector.py  test_injectorplugin.py  test_publisher.py  test_registry.py  test_slot.py  test_topbottominjector.py  test_wsgi.py
tests/testdata/SomePackage/: setup.py
tests/testdata/SomePackage/src/somepackage/: __init__.py  resources.py
